--- a/notebooks/Evaluation_and_results_final.ipynb
+++ b/notebooks/Evaluation_and_results_final.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "cf15b7ac",
    "metadata": {},
    "outputs": [
@@ -572,6 +572,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "81f90dbf",
+   "metadata": {},
+   "source": [
+    "**Conclusions:**\n",
+    "* The best overall performance was achieved with:\n",
+    "    * Selection: tournament\n",
+    "    * Crossover: merge\n",
+    "    * Mutation: multiple_point\n",
+    "     * Elitism: enabled (True)\n",
+    "* These configurations showed:\n",
+    "    * A steady and significant increase in fitness over generations.\n",
+    "    * The highest final fitness values among all tested combinations.\n",
+    "\n",
+    "**Note:** Elitism and more complex mutation strategies (like multiple_point) play a critical role in ensuring consistent improvement and better final results."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "a2163304",
@@ -955,6 +973,17 @@
     "summary = summary.sort_values(by=\"Final Score\", ascending=False)\n",
     "summary.reset_index(drop=True, inplace=True)\n",
     "summary\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3511013",
+   "metadata": {},
+   "source": [
+    "**Conclusions:**\n",
+    "* Best score: tournament + merge + one_point + elitism=True -> 37800\n",
+    "* worse score: ranking + merge + one_point + elitism=False -> 12600\n",
+    "* Generally, ranking selection without elitism performed poorly"
    ]
   }
  ],
