--- a/notebooks/experiments.ipynb
+++ b/notebooks/experiments.ipynb
@@ -104,6 +104,17 @@
     "    seed=42\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ee84fab",
+   "metadata": {},
+   "source": [
+    "**Conclusions:**\n",
+    "* The algorithm showed a steady improvement in fitness over time, with noticeable jumps in performance around generations 15, 30, 95, and 145\n",
+    "* This indicates that the genetic operators effectively explored the solution space and avoided getting stuck in local optima\n",
+    "* The best solution found achieved a final fitness score of 26,662"
+   ]
   }
  ],
  "metadata": {
