--- a/notebooks/Evaluation_and_results_final.ipynb
+++ b/notebooks/Evaluation_and_results_final.ipynb
@@ -15,15 +15,15 @@
     "import pandas as pd\n",
     "import itertools\n",
     "\n",
-    "# Caminho absoluto da pasta do projeto (um nível acima)\n",
+    "# path to project file\n",
     "project_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
     "src_path = os.path.join(project_root, \"src\")\n",
     "\n",
-    "# Adiciona a pasta src ao path\n",
+    "# add source folder to path\n",
     "if src_path not in sys.path:\n",
     "    sys.path.append(src_path)\n",
     "\n",
-    "# Imports do teu projeto\n",
+    "# Imports\n",
     "from ga_runner import run_ga"
    ]
   },
@@ -562,9 +562,9 @@
     "for r in results:\n",
     "    label = f\"{r['selection']}-{r['crossover']}-{r['mutation']} | elit={r['elitism']}\"\n",
     "    plt.plot(r[\"history\"], label=label)\n",
-    "plt.xlabel(\"Geração\")\n",
-    "plt.ylabel(\"Melhor Fitness\")\n",
-    "plt.title(\"Evolução do Fitness por Geração\")\n",
+    "plt.xlabel(\"Generation\")\n",
+    "plt.ylabel(\"Best Fitness\")\n",
+    "plt.title(\"Fitness evolution for each generation\")\n",
     "plt.legend(bbox_to_anchor=(1.05, 1), loc=\"upper left\")\n",
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
@@ -989,7 +989,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1003,7 +1003,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
