--- a/notebooks/experiments.ipynb
+++ b/notebooks/experiments.ipynb
@@ -12,15 +12,15 @@
     "import random\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Caminho absoluto da pasta do projeto (um nível acima)\n",
+    "# path to project\n",
     "project_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
     "src_path = os.path.join(project_root, \"src\")\n",
     "\n",
-    "# Adiciona a pasta src ao path\n",
+    "# add source folder to path\n",
     "if src_path not in sys.path:\n",
     "    sys.path.append(src_path)\n",
     "\n",
-    "# Imports do teu projeto\n",
+    "# imports\n",
     "from ga_runner import run_ga"
    ]
   },
@@ -47,14 +47,14 @@
     "\n",
     "    plt.figure()\n",
     "    plt.plot(best_fitness_per_gen, label='Best Fitness')\n",
-    "    plt.xlabel(\"Geração\")\n",
+    "    plt.xlabel(\"Generation\")\n",
     "    plt.ylabel(\"Fitness\")\n",
     "    plt.title(f\"{selection_type} | {crossover_type} | {mutation_type}\")\n",
     "    plt.grid()\n",
     "    plt.legend()\n",
     "    plt.show()\n",
     "\n",
-    "    print(f\"Melhor fitness final: {best_score:.2f}\")\n",
+    "    print(f\"Best final fitness: {best_score:.2f}\")\n",
     "    return best_score"
    ]
   },
@@ -97,9 +97,9 @@
     "    pop_size=100,\n",
     "    generations=150,\n",
     "    elite_size=2,\n",
-    "    selection_type=\"tournament\",     # ou \"roulette\", \"ranking\"\n",
-    "    crossover_type=\"group\",          # ou \"merge\"\n",
-    "    mutation_type=\"swap\",            # ou \"one_point\", \"multiple_point\"\n",
+    "    selection_type=\"tournament\",     # or \"roulette\", \"ranking\"\n",
+    "    crossover_type=\"group\",          # or \"merge\"\n",
+    "    mutation_type=\"swap\",            # or \"one_point\", \"multiple_point\"\n",
     "    mutation_prob=0.2,\n",
     "    seed=42\n",
     ")"
@@ -119,7 +119,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -133,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
